--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/routes/workoutRoutes.js",
-      "dest": "index.js"
+      "src": "/routes/(.*)",
+      "dest": "workoutRoutes.js"
     }
   ]
 }
