--- a/vercel.json
+++ b/vercel.json
@@ -8,8 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/routes/(.*)",
-      "dest": "router.js"
+      "src": "/(.*)",
+      "dest": "index.js"
     }
   ]
 }
